# Searchor

./: .dockerignore  .gitignore  CHANGELOG.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LEARN.md  LICENSE  NOTICE.md  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  pyproject.toml  setup.py
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  python-publish.yml
Code/: CHANGELOG.txt  README.txt  setup.py
Code/Searchor/: __init__.py
Code/Searchor.py/: __init__.py
examples/: copy_url.py  custom.py  custom_engine.py  getinfo.py  open_web.py  scrape.py  search bunch.py  searchamazon.py  searchbing.py  searchduckduckgo.py  searchgoogle.py  searchwikipedia.py  searchyahoo.py
examples/cli/: SUPPORTED_COMMANDS.md  SUPPORTED_OPTIONS.md
src/: MANIFEST.in  setup.py
src/Searchor/: __init__.py
src/searchor/: __init__.py  history.py  main.py
